# cage

./: .gitignore  CODEX_START.txt  Cargo.toml  META_PROCESS.txt  README.md  STAKEHOLDER.txt  START.txt  STATUS.md  SUPPORT.txt  TASKS.txt  UAT_REPORT.md  UAT_REPORT_SESSION2.md  UAT_REPORT_SESSION3.md  logo.txt  rust-toolchain.toml
.analysis/: CAGE-12b_investigation.md  MOD4_SIGNOFF.md  NEXT_SESSION_CONTEXT.md  NEXT_TASKS_REFERENCE.md  QA-02_CLI_SMOKE_TESTS.md  SESSION_01_p0_complete_rsb_ready.md  SESSION_02_progress_framework_complete.md  SESSION_MOD4-01_COMPLETE.md  SESSION_MOD4_COMPLETE.md  SESSION_MOD4_PROGRESS.md  SESSION_REFRESHER.md  UAT_RECIPIENT_PERSISTENCE.md  UAT_REPORT.md  age_proxy_coverage_analysis.md  cage_04_inplace_safety_complete.md  cage_05_progress_telemetry_complete.md  consolidated_wisdom.txt  egg.001.meta-process-v2-analysis.txt  egg.1.rsb-xdg-analysis.txt  hub_integration_success.md  infra_01_rsb_pty_migration_backlog.md  mod_spec_reorg_plan.md  red_egg.1.cage_technical_analysis.txt  streaming_benchmark_results.md  task_010_rsb_migration_complete.md  technical_debt.txt  uat_bug01_extension_fix.md  uat_bug02_recursive_traversal.md  uat_bug03_glob_patterns.md  uat_bug04_unlock_options.md  uat_bug05_proxy_pty_rewrite.md  uat_test_suite_fixes.md
.eggs/: egg.1.cage-development-review.txt  egg.1.cage-project-summary.txt  egg.1.rsb-cli-analysis.txt
docs/: LIBRARY_USAGE.md
docs/archive/: egg.001.development-reference.txt
docs/dev/: STRING_MANAGEMENT.md
docs/feats/: FEATURES_ADP.md  FEATURES_AUDIT.md  FEATURES_BUFF.md  FEATURES_CORE.md  FEATURES_FORGE.md  FEATURES_KEYGEN.md  FEATURES_MGR.md  FEATURES_PTY.md  FEATURES_TEMPLATE.md
docs/procs/: BACKUP_RETENTION_DESIGN.md  CODEX_WARMUP.txt  CONTINUE.md  DONE.txt  PROCESS.txt  QUICK_REF.txt  ROADMAP.md  SPRINT.txt  TASKS.txt  TASK_STATUS_REVIEW.md  VALIDATION_REPORT.md
docs/qa/: AGE_CLI_REFERENCE.md
docs/ref/: ROADMAP.md
docs/tech/: ROADMAP.md
examples/: pty_demo.rs
scripts/: check_inline_strings.sh  check_todos.sh
src/: deps.rs  driver.rs  error.rs  lang.rs  lib.rs  mod.rs  passphrase.rs  prelude.rs
src/adp/: mod.rs  pipe.rs  v1.rs  v2.rs
src/audit/: mod.rs
src/buff/: mod.rs
src/cage/: adapter.rs  adapter_v2.rs  adapter_v2_pipe_passphrase.rs  age_engine.rs  config.rs  error.rs  in_place.rs  mod.rs  passphrase.rs  pty_wrap.rs  requests.rs  security.rs  strings.rs  (+1 more)
tests/: README.md  comprehensive_api_tests.rs  pty_test.rs  rsb_integration.rs  run_all_tests.sh  test_age_cli_sanity.rs  test_backup_retention.rs  test_cli_init.rs  test_cli_smoke.rs  test_keygen.rs  test_lifecycle.sh  test_multi_recipient.rs  test_request_api.rs  test_selective_unlock.rs  test_ssh_identity.rs  test_streaming_benchmark.rs  test_structured_telemetry.rs  tty_age_automation.sh  tty_age_automation_v2.sh  unit_tests.rs
(+94 files in other folders)
