[package]
name = "cage"
version = "0.2.0"
edition = "2021"
description = "Age encryption automation CLI with PTY support"
repository = "https://github.com/padlokk/cage"
license = "AGPL-3.0"            
publish = false  

[[bin]]
name = "cage"
path = "src/bin/cli_age.rs"

[dependencies]
portable-pty = "0.9"

# Core dependencies for Age automation
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
# clap removed - replaced by RSB framework CLI system
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
rpassword = "7.3"  # Secure terminal passphrase input
which = "6.0"      # Find binaries in PATH

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # TTY detection on Unix systems

# RSB framework with re-exported dependencies (optional for now)
# KEEP THIS!
rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }
