[package]
name = "cage"
version = "0.4.0"
edition = "2021"
description = "Age encryption automation CLI with PTY support"
repository = "https://github.com/padlokk/cage"
license = "AGPL-3.0"            
publish = false  

# does this need a lib?

[[bin]]
name = "cage"
path = "src/bin/cli_age.rs"

[dependencies]
# portable-pty = "0.9"  # Testing Hub terminal-ext integration

# Core dependencies for Age automation
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
# clap removed - replaced by RSB framework CLI system
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
rpassword = "7.3"  # Secure terminal passphrase input
which = "8.0"      # Find binaries in PATH - TODO make sure the version bump doesnt break anything
globset = "0.4"    # Glob pattern matching for file filters

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # TTY detection on Unix systems

# RSB ecosystem dependencies
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }
hub = { git = "https://github.com/oodx/hub.git", features = ["terminal-ext"] }
